geração de relatórios funcionando